--- a/index.html
+++ b/index.html
@@ -113,10 +113,7 @@
             </a>
             <div class="matrixTxt">
                 Aplicativo que simula um sistema de solicitação e 
-                entrega de alimentos para reataurantes, pizzarias, churrascarias e etc.
-                <br>
-                    Obs.: Caso haja problemas no acesso cole este link:<br/> https://ifuture-eyeb.onrender.com/
-                <br><br>
+                entrega de alimentos para reataurantes, pizzarias, churrascarias e etc.<br><br>
                 <a id="ifuture-gp">
                     Versão mobile no google play
                 </a><br>
