adicionando nova aplicação "super formulário"

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <div class="matrix" id='e-commerce'>
                 <a id='e-commerce-frontPage'>E-commerce (fullstack)
                     <br>
-                    <img src='../../img/Ecommerce.png' width="300"
+                    <img src='./img/Ecommerce.png' width="300"
                     alt="imagem do app Ecommerce"/>
                 </a>
                 <div class="matrixTxt">
@@ -46,84 +46,97 @@
             </div>
 
             <div class="matrix" id='loja-de-servicos'>
-            <a id="loja-de-servicosPage">Loja de Serviços(fullstack)
-                <br>
-                <img src='../../img/achei_servicos.png' width="300"
-                alt="imagem do app loja de serviços"/>
-            </a>
-            <div class="matrixTxt">
-                Projeto fullstack de app para cadastramento e divulgação de serviços diversos:<br/><br/>
-                <a id="loja-de-servicosGp">
-                    Versão mobile no google play
-                </a><br>
-                <a id="loja-de-servicosFrontRepo">
-                    Repositório Frontend
-                </a><br>
-                <a id="loja-de-servicosBackRepo">
-                    Repositório Backend
-                </a><br>
-                <a id="loja-de-servicos-repoMobile">
-                    Repositório Mobile
-                </a>                        
-            </div>
+                <a id="loja-de-servicosPage">Loja de Serviços(fullstack)
+                    <br>
+                    <img src='./img/achei_servicos.png' width="300"
+                    alt="imagem do app loja de serviços"/>
+                </a>
+                <div class="matrixTxt">
+                    Projeto fullstack de app para cadastramento e divulgação de serviços diversos:<br/><br/>
+                    <a id="loja-de-servicosGp">
+                        Versão mobile no google play
+                    </a><br>
+                    <a id="loja-de-servicosFrontRepo">
+                        Repositório Frontend
+                    </a><br>
+                    <a id="loja-de-servicosBackRepo">
+                        Repositório Backend
+                    </a><br>
+                    <a id="loja-de-servicos-repoMobile">
+                        Repositório Mobile
+                    </a>                        
+                </div>
             </div>
 
             <div class="matrix" id='fakebank'>
-            <a id="fakebankPage">Fakebank (fullstack)
-                <br>
-                <img src='../../img/labebank.png' width="300" alt="imagem do app labebank"/>
-            </a>
-            <div class="matrixTxt">
-                Aplicativo para operações bancárias. Simula as mais básicas operações como saldo, extrato,pagamentos e transfereências.
-                <br><br>
-                <a id="fakebank-gp">
-                    Versão mobile no google play
+                <a id="fakebankPage">Fakebank (react / fullstack)
+                    <br>
+                    <img src='./img/labebank.png' width="300" alt="imagem do app labebank"/>
                 </a>
-                <br>
-                <a id="fakebank-webRepo">
-                    Repositório Frontend
-                </a><br>            
-                <a id="fakebank-backRepo">
-                    Repositório Backend
-                </a><br>            
-                <a id="fakebank-mobileRepo">
-                    Repositório Mobile
-                </a>
+                <div class="matrixTxt">
+                    Aplicativo para operações bancárias. Simula as mais básicas operações como saldo, extrato,pagamentos e transfereências.
+                    <br><br>
+                    <a id="fakebank-gp">
+                        Versão mobile no google play
+                    </a>
+                    <br>
+                    <a id="fakebank-webRepo">
+                        Repositório Frontend
+                    </a><br>            
+                    <a id="fakebank-backRepo">
+                        Repositório Backend
+                    </a><br>            
+                    <a id="fakebank-mobileRepo">
+                        Repositório Mobile
+                    </a>
+                </div>
             </div>
+            
+            <div class="matrix" id='pix-menager'>
+                <a id="pix-menagerDocs">Gerenciador de pix (backend, API)
+                    <br>
+                    <img src='./img/gerenciador-pix.png' width="300"
+                        alt="gerenciador-pix"/>
+                </a>
+                <div class="matrixTxt">
+                    API para gerenciamento e controle de cobranças via pix.
+                    A API é mais uma demonstração do meu trabalho, portanto os endpoints e
+                    resultados das requisições são para uma conta demonstrativa da Gerencianet.          
+                </div>
             </div>
 
-            <div class="matrix" id='pix-menager'>
-            <a id="pix-menagerDocs">Gerenciador de pix (backend, API)
-                <br>
-                <img src='../../img/gerenciador-pix.png' width="300"
-                    alt="gerenciador-pix"/>
-            </a>
-            <div class="matrixTxt">
-                API para gerenciamento e controle de cobranças via pix.
-                A API é mais uma demonstração do meu trabalho, portanto os endpoints e
-                resultados das requisições são para uma conta demonstrativa da Gerencianet.          
-            </div>
+            <div class="matrix" id='super-form'>
+                <a id="super-form-page">Super formulário (frontend)
+                    <br>
+                    <img src='./img/super_form.png' width="300"
+                        alt="imagem de projeto super formulário"/>
+                </a>
+                <div class="matrixTxt">
+                    Aplicação que consiste num formulário que abrange toda a página, com
+                    os mais váriados tipos de input.          
+                </div><br>
+                <a id="super-formRepo">Repositório</a>
             </div>
 
             <div class="matrix" id='ifuture'>
-            <a id="ifuturePage">Ifuture (frontend)
-                <br>
-                <img src='../../img/ifuture.png' width="300" height='400' 
-                alt="imagem do app labefood"/>
-            </a>
-            <div class="matrixTxt">
-                Aplicativo que simula um sistema de solicitação e 
-                entrega de alimentos para reataurantes, pizzarias, churrascarias e etc.<br><br>
-                <a id="ifuture-gp">
-                    Versão mobile no google play
-                </a><br>
-                <a id="ifuture-frontRepo">
-                    Repositório Frontend
-                </a><br>
-                <a id="ifuture-mobileRepo">
-                    Repositório Mobile
+                <a id="ifuturePage">Ifuture (frontend)
+                    <br>
+                    <img src='../../img/ifuture.png' width="300" height='400' 
+                    alt="imagem do app labefood"/>
                 </a>
-            </div>
+                <div class="matrixTxt">
+                    Aplicativo que simula um sistema de solicitação e 
+                    entrega de alimentos para reataurantes, pizzarias, churrascarias e etc.<br><br>
+                    <a id="ifuture-gp">
+                        Versão mobile no google play
+                    </a><br>
+                    <a id="ifuture-frontRepo">
+                        Repositório Frontend
+                    </a><br>
+                    <a id="ifuture-mobileRepo">
+                        Repositório Mobile
+                    </a>
+                </div>
             </div>
         </div>
     </div>
