alteração na mensagem do link para app whatsapp

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
             <li><a href='https://www.instagram.com/gazua.keymaster' target='_blank'>
                 <i class="fab fa-instagram icons instagram"></i>
             </a></li>
-            <li><a href=https://api.whatsapp.com/send?phone=5571984707037&text='Hi! We are Gazua Dev Center and how we can help you' target='_blank'>
+            <li><a href="https://api.whatsapp.com/send?phone=5571984707037&text=Olá! Sou desenvolvedor web e de aplicações mobile, como posso ajudá-lo" target='_blank'>
                 <i class="fab fa-whatsapp icons whatsapp"></i>
             </a></li>
             <li><a href='https://www.linkedin.com/in/gazuadev' target='_blank'>
