ajustes de mudança de conta no render

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
             </div>
 
             <div class="matrix" id='super-form'>
-                <a id="super-form-page">Super formulário (frontend)
+                <a id="super-form-page">Super formulário (fullstack)
                     <br>
                     <img src='./img/super_form.png' width="300"
                         alt="imagem de projeto super formulário"/>
@@ -115,13 +115,14 @@
                     Aplicação que consiste num formulário que abrange toda a página, com
                     os mais váriados tipos de input.          
                 </div><br>
-                <a id="super-formRepo">Repositório</a>
+                <a id="super-formRepo">Repositório frontend</a><br>
+                <a id="super-form-backendRepo">Repositório backend</a>
             </div>
 
             <div class="matrix" id='ifuture'>
                 <a id="ifuturePage">Ifuture (frontend)
                     <br>
-                    <img src='../../img/ifuture.png' width="300" height='400' 
+                    <img src='./img/ifuture.png' width="300" height='400' 
                     alt="imagem do app labefood"/>
                 </a>
                 <div class="matrixTxt">
