--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                 </div>
             </div>
             
-            <div class="matrix" id='pix-menager'>
+            <div class="matrix" id='pix-manager'>
                 <a id="pix-menagerDocs">Gerenciador de pix (backend, API)
                     <br>
                     <img src='./img/gerenciador-pix.png' width="300"
@@ -103,6 +103,7 @@
                     A API é mais uma demonstração do meu trabalho, portanto os endpoints e
                     resultados das requisições são para uma conta demonstrativa da Gerencianet.          
                 </div>
+                <a id="pix-managerApiRepo">Repositório</a>
             </div>
 
             <div class="matrix" id='super-form'>
